[package]
name = "shutdown"
version = "0.1.0"
authors = ["Sander van Harmelen <sander@vanharmelen.nl>"]
edition = "2018"
description = "shutdown can be used to gracefully exit (part of) a running program"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
signal-hook = "0.2"
tokio = { version = "0.2", features = ["rt-core", "sync"] }

[dev-dependencies]
env_logger = "0.8"
libc = "0.2"
tokio = { version = "0.2", features = ["macros", "time"] }
