[package]
name = "shutdown"
version = "0.5.0"
authors = ["Sander van Harmelen <sander@vanharmelen.nl>"]
edition = "2021"
description = "shutdown can be used to gracefully exit (part of) a running program"
documentation = "https://docs.rs/shutdown/"
homepage = "https://github.com/svanharmelen/shutdown"
repository = "https://github.com/svanharmelen/shutdown"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
log = "0.4"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-util = "0.7"

[dev-dependencies]
env_logger = "0.11"
libc = "0.2"
tokio = { version = "1", features = ["macros", "time"] }
